SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getPendingDataTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getPendingDataTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* ReflectionTypeLayout_getPendingDataTypeLayout(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getSpecializedTypePendingDataVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getSpecializedTypePendingDataVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_getSpecializedTypePendingDataVarLayout(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_getSpecializedTypeArgCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_getSpecializedTypeArgCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionType_getSpecializedTypeArgCount(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_getSpecializedTypeArgType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_getSpecializedTypeArgType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionType_getSpecializedTypeArgType(SlangReflectionType* type, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getBindingRangeCount(SlangReflectionTypeLayout* typeLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeType", ExactSpelling = true)]
    public static extern SlangBindingType ReflectionTypeLayout_getBindingRangeType(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeBindingCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeBindingCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getBindingRangeBindingCount(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeLeafTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeLeafTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* ReflectionTypeLayout_getBindingRangeLeafTypeLayout(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeLeafVariable"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeLeafVariable", ExactSpelling = true)]
    public static extern SlangReflectionVariable* ReflectionTypeLayout_getBindingRangeLeafVariable(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getFieldBindingRangeOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getFieldBindingRangeOffset", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getFieldBindingRangeOffset(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long fieldIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getExplicitCounterBindingRangeOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getExplicitCounterBindingRangeOffset", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getExplicitCounterBindingRangeOffset(SlangReflectionTypeLayout* inTypeLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeDescriptorSetIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeDescriptorSetIndex", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getBindingRangeDescriptorSetIndex(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeFirstDescriptorRangeIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeFirstDescriptorRangeIndex", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getBindingRangeFirstDescriptorRangeIndex(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getBindingRangeDescriptorRangeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getBindingRangeDescriptorRangeCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getBindingRangeDescriptorRangeCount(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getDescriptorSetCount(SlangReflectionTypeLayout* typeLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetSpaceOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetSpaceOffset", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getDescriptorSetSpaceOffset(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetDescriptorRangeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetDescriptorRangeCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getDescriptorSetDescriptorRangeCount(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetDescriptorRangeIndexOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetDescriptorRangeIndexOffset", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getDescriptorSetDescriptorRangeIndexOffset(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex, [NativeTypeName("SlangInt")] long rangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetDescriptorRangeDescriptorCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetDescriptorRangeDescriptorCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getDescriptorSetDescriptorRangeDescriptorCount(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex, [NativeTypeName("SlangInt")] long rangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetDescriptorRangeType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetDescriptorRangeType", ExactSpelling = true)]
    public static extern SlangBindingType ReflectionTypeLayout_getDescriptorSetDescriptorRangeType(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex, [NativeTypeName("SlangInt")] long rangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getDescriptorSetDescriptorRangeCategory"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getDescriptorSetDescriptorRangeCategory", ExactSpelling = true)]
    public static extern SlangParameterCategory ReflectionTypeLayout_getDescriptorSetDescriptorRangeCategory(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long setIndex, [NativeTypeName("SlangInt")] long rangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getSubObjectRangeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getSubObjectRangeCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getSubObjectRangeCount(SlangReflectionTypeLayout* typeLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getSubObjectRangeBindingRangeIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getSubObjectRangeBindingRangeIndex", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getSubObjectRangeBindingRangeIndex(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long subObjectRangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getSubObjectRangeSpaceOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getSubObjectRangeSpaceOffset", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_getSubObjectRangeSpaceOffset(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long subObjectRangeIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getSubObjectRangeOffset"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getSubObjectRangeOffset", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_getSubObjectRangeOffset(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("SlangInt")] long subObjectRangeIndex);
